syntax = "proto3";

option java_package = "com.leo.chat.proto";

import "data/Message.proto";
import "data/Subscribe.proto";
import "data/UnSubscribe.proto";
import "data/Result.proto";

message ChatPack {
    enum Type {
        PING = 0;
        PONG = 1;
        SUBSCRIBE = 2;
        UNSUBSCRIBE = 3;
        MESSAGE = 4;
        RESULT = 5;
    }

    Type type = 1;
    oneof data {
        data.Subscribe subscribe = 3;
        data.UnSubscribe unsubscribe = 4;
        data.Message message = 5;
        data.Result result = 6;
    }

}