syntax = "proto3";

package data;
option java_package = "com.leo.chat.proto.data";

message UnSubscribe {
    string uid = 1;
    repeated string topics = 2;
}